# old-projects

./: .Rbuildignore  .Rprofile  .gitignore  .pre-commit-config.yaml  DESCRIPTION  Dockerfile  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  Procfile  README.Rmd  README.md  __main__.py  actions.py  alien.py  alien_invasion.py  analyze_results.py  api.py  app.R  app.py  bullet.py  button.py  codecov.yml  data.py  dvc.yaml  game.py  game_stats.py  index.html  logger.py  main.py  metrics.txt  player.py  pyproject.toml  requirements.txt  scoreboard.py  settings.py  ship.py  teams.py  widgets.py
R/: app.R  app_config.R  app_server.R  app_ui.R  edar.R  edar_report.R  fct_app_ui.R  fct_img_prep.R  fct_projectview_server.R  fct_ui.R  hello.R  mod_business_analytics.R  mod_dashboard.R  mod_file_upload.R  mod_projects.R  mod_projectview.R  moveset.R  numerics.R  sysdata.rda  tab_evolution.R  tab_pokedex.R  teambuilder.R  utils_business_analytics.R  utils_server.R  utils_timesheet_exports.R  utils_ui.R
TSRecord/: app.py
alien_invasion/: alien_invasion.py  button.py  ship.py
data/: attack_type_effects.json  encounters.csv  evolution.rda  moves.rda  pokemon.rda  project_names.csv  stats.csv  timesheet_raw.rda  vacation.csv  workpackages.csv
data-raw/: timesheet_raw.R
deployml/: README.md
dev/: 01_start.R  02_dev.R  build_model.R  setup.txt
edar/: DESCRIPTION  LICENSE  README.Rmd
fb_sim/: .gitignore  player.py
fb_sim2/: league.py  main.py  match.py  player.py  team.py
imrecog/: .Rbuildignore  .gitignore  .travis.yml
inst/: WORDLIST  golem-config.yml
man/: edar.Rd  (+1 more)
(+161 files in other folders)
