[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = "A Todo-App via Command Line Interface (CLI)"
authors = ["degiwo <d.wong93@hotmail.de>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
bandit = "^1.7.4"
pylint = "^2.13.9"
flake8 = "^4.0.1"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
