[tool.poetry]
name = "teambuilder"
version = "0.0.1"
description = ""
authors = ["degiwo <d.wong93@hotmail.de>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.6.1"
dash-bootstrap-components = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
